apps/postwoman/postwoman-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postwoman
  labels:
    app: postwoman
    env: prod
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  selector:
    matchLabels:
      app: postwoman
      env: prod
  template:
    metadata:
      name: postwoman
      labels:
        app: postwoman
        env: prod
    spec:
      containers:
        - name: postwoman
          image: liyasthomas/postwoman
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          livenessProbe:
            timeoutSeconds: 3
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
            httpGet:
              path: /
              port: 3000
              scheme: HTTP
          readinessProbe:
            timeoutSeconds: 3
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
            httpGet:
              path: /
              port: 3000
              scheme: HTTP
---
apiVersion: v1
kind: Service
metadata:
  name: postwoman
  labels:
    app: postwoman
    env: prod
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: postwoman
    env: prod
